--- a/WebCatalog/WebCatalog/Views/Shared/_Layout.cshtml
+++ b/WebCatalog/WebCatalog/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Products">Список продуктов</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Products">Добавление продуктов</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="NewCategoryProducts">Добавление новых категорий продуктов</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="ViewProducts">Список продуктов</a>
                         </li>
                     </ul>
                 </div>
