--- a/WebCatalog/WebCatalog/Views/Catalog/RemoveProducts.cshtml
+++ b/WebCatalog/WebCatalog/Views/Catalog/RemoveProducts.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebCatalog.Domain.Entity.Catalog
+﻿@model WebCatalog.DAL.Repository.Interfaces.ICatalogRepository
 
 @{
     ViewData["Title"] = "Удаление продукта";
